# TreeDB

./: .gitignore  LICENSE  README.md  StorageTree.py  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: API.md
src/: StorageTree.py
src/TreeDB/: StorageTree.py  __init__.py  database.py  files.py  paths.py  tree.py  utils.py
src/lotdb/: api.py  blobs.py  database.py  files.py  measurements.py  paths.py  tree.py  utils.py
tests/: test_blobs.py  test_database.py  test_imports.py  test_measurements.py  test_paths.py  test_tree.py
