[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotdb"
version = "1.1.1"
description = "Persistent tree database for hierarchical metadata and file-backed datasets"
authors = [
    {name = "Till Spitz", email = "tillh.spitz@t-online.de"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "ZODB"
]

[project.optional-dependencies]
io = [
    "pandas",
    "scipy",
]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["StorageTree"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
